# esp8266-weather-station

./: .gitignore  ARCHITECTURE.md  CMakeLists.txt  Kconfig.projbuild  LICENSE  README.md  sdkconfig.defaults
components/dht22/: dht22.c
components/dht22/include/: dht22.h
components/ssd1306/: CMakeLists.txt  ssd1306.c  ssd1306_draw.c  ssd1306_fonts.c
components/ssd1306/include/: ssd1306.h
components/time_manager/: CMakeLists.txt  time_manager.c
components/time_manager/include/: time_manager.h
components/weather_api/: CMakeLists.txt  weather_api.c
components/weather_api/include/: weather_api.h
components/wifi_manager/: CMakeLists.txt  wifi_manager.c
components/wifi_manager/include/: wifi_manager.h
main/: CMakeLists.txt  Kconfig.projbuild  esp8266_weather_oled.c
